# hello-world

./: .gitignore  CMakeLists.txt  Makefile  README.md  SmartAssert.hpp  SyncQueue.hpp  Thread.hpp  log.h  log.hpp  main.c  test  test.c  test.cpp  test_scopeguard.cpp  test_smartassert.cpp
include/: ScopeGuard.hpp
tests/: test_scopeguard.cpp  test_smartassert.cpp  test_thread.cpp
